29 November 2018: Wouter
	- iana portlist updated.

28 November 2018: Wouter
	- Fix leak in chroot fix for auth-zone.
	- Fix clang analysis for outside directory build test.

27 November 2018: Wouter
	- Fix DNS64 to not store intermediate results in cache, this avoids
	  other threads from picking up the wrong data.  The module restores
	  the previous no_cache_store setting when the the module is finished.
	- Fix #4208: 'stub-no-cache' and 'forward-no-cache' not work.
	- New and better fix for Fix #4193: Fix that prefetch failure does
	  not overwrite valid cache entry with SERVFAIL.
	- auth-zone give SERVFAIL when expired, fallback activates when
	  expired, and this is documented in the man page.
	- stat count SERVFAIL downstream auth-zone queries for expired zones.
	- Put new logos into windows installer.
	- Fix windows compile for new rrset roundrobin fix.
	- Update contrib fastrpz patch for latest release.

26 November 2018: Wouter
	- Fix to not set GLOB_NOSORT so the unbound.conf include: files are
	  sorted and in a predictable order.
	- Fix #4193: Fix that prefetch failure does not overwrite valid cache
	  entry with SERVFAIL.
	- Add unbound-control view_local_datas command, like local_datas.
	- Fix that unbound-control can send file for view_local_datas.

22 November 2018: Wouter
	- With ./configure --with-pyunbound --with-pythonmodule
	  PYTHON_VERSION=3.6 or with 2.7 unbound can compile and unit tests
	  succeed for the python module.
	- pythonmod logs the python error and traceback on failure.
	- ignore debug python module for test in doxygen output.
	- review fixes for python module.
	- Fix #4209: Crash in libunbound when called from getdns.
	- auth zone zonefiles can be in a chroot, the chroot directory
	  components are removed before use.
	- Fix that empty zonefile means the zonefile is not set and not used.
	- make depend.

21 November 2018: Wouter
	- Scrub NS records from NODATA responses as well.

20 November 2018: Wouter